[package]
name = "rust-a-rag-us"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", features = ["download-libtorch"] }
anyhow = "1"
serde = "1.0"
serde_json = "1.0"
tch = "0.14"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1.14"}
scraper = "0.18"
reqwest = "0.11"
log = "0.4"
chrono = "0.4"
sha1 = "0.10"
env_logger = "0.10"
qdrant-client = "1.6"
clap = { version = "4.4", features = ["derive"]} 
uuid = { version = "1.6", features = ["serde", "v4", "v5"] }
ollama-rs = { version = "0.1.3", features = ["stream"]}
text-splitter = "0.4.5"
tiktoken-rs = "0.5.7"

axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
utoipa-redoc = { version = "2", features = ["axum"] }
utoipa-rapidoc = { version = "2", features = ["axum"] }
dotenv = "0.15.0"
